# openapi/v2.yaml
@@ -3479,6 +3479,12 @@ components:
           $ref: '#/components/schemas/MonitoringOptions'
         ip_report_config:
           $ref: '#/components/schemas/IPReportConfig'
+        implementation:
+          type: string
+          enum:
+          - go
+          - rust
+          default: go
     InstallPreview:
       type: object
       required:
@@ -3501,6 +3507,11 @@ components:
           $ref: '#/components/schemas/MonitoringOptions'
         ip_report_config:
           $ref: '#/components/schemas/IPReportConfig'
+        implementation:
+          type: string
+          enum:
+          - go
+          - rust
     UpgradePreviewWrite:
       type: object
       additionalProperties: false
